--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.FBLogo { 
+ display: flex;
+ justify-content: left;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cover {
+  justify-content: space-around;
+  position: relative;
+  box-shadow: 0 0.188em 1.550em rgb(156, 156, 156);
+  background-color: white;
+  width: 20em;
+  height: 14em;
+  top: -4in;
+  margin-left: 12in;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.email {
+  height: 3em;
+  width: 18em;
+  margin-left: 0.17in;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.psw {
+  height: 3em;
+  width: 18em;
+  margin-left: 0.17in;
+
 }
 
-.App-link {
-  color: #61dafb;
+.login {
+  position: relative;
+  left: 0.17in;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.forgot {
+  margin-left: 1.05in;
+}
+
+.newacc {
+  margin-left: 0.65in;
 }
